--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/lwjgl-2.9.3/jar/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time-2.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
