--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/slick/lib/jinput.jar"/>
-	<classpathentry kind="lib" path="lib/slick/lib/slick.jar">
+	<classpathentry kind="lib" path="lib/slick/lib/slick.jar" sourcepath="lib/slick/src">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="game-jam/lib/lwjgl-2.9.3/native/windows"/>
 		</attributes>
