Started the new LWJGL conversion and added libraries and current classes. This does not currently work.

--- a/.classpath
+++ b/.classpath
@@ -2,22 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/lwjgl-2.9.3/lwjgl.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="game-jam/lib/lwjgl-2.9.3/native"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="lib/slick/jinput.jar"/>
-	<classpathentry kind="lib" path="lib/slick/slick.jar" sourcepath="lib/slick/src">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="game-jam/lib/lwjgl-2.9.3/native"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="lib/lwjgl-2.9.3/lwjgl_util.jar"/>
-	<classpathentry kind="lib" path="lib/slick/joda-time-2.7.jar"/>
-	<classpathentry kind="lib" path="lib/slick/jogg-0.0.7.jar"/>
-	<classpathentry kind="lib" path="lib/slick/jorbis-0.0.15.jar"/>
 	<classpathentry kind="lib" path="assets"/>
-	<classpathentry kind="lib" path="lib/lwjgl-2.9.3/native"/>
+	<classpathentry kind="lib" path="lib/joda-time-2.7.jar"/>
+	<classpathentry kind="lib" path="lib/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="game-jam/lib/native"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/slick-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
